--- a/index.html
+++ b/index.html
@@ -11,17 +11,8 @@
 
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
 
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+
 </head>
 
 <body>
@@ -35,7 +26,7 @@
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.
       </p>
-      <button>Learn More</button>
+      <button class="button orange-button">Learn More</button>
     </div>
     <div class="containers SUVs">
       <img class="icon" src="images/icon-suvs.svg" alt="icon">
@@ -46,6 +37,8 @@
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.
       </p>
+      <button class="button blue-button">Learn More</button>
+
     </div>
 
     <div class="containers Luxury">
@@ -57,6 +50,8 @@
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.
       </p>
+      <button class="button green-button">Learn More</button>
+
     </div>
   </main>
   <footer class="attribution">
